[package]
name = "netmount"
description = "NetMount"
version = "1.2.1"
authors = ["VirtualHotBar"]
license = "AGPL-3.0"
repository = ""
default-run = "netmount"
edition = "2021"
rust-version = "1.93.0"

[package.metadata.windows]
manifest = "app.manifest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
itertools = "0"
tauri-build = { version = "2.2", features = [] }
indicatif = "0.18.4"
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
zip = "2.4.2"
tokio = { version = "1", features = ["full"] }
tar = "0.4.40"
flate2 = { version = "1.0.30", features = ["zlib"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2", features = [
    "macos-private-api",
    "devtools",
    "tray-icon",
] }
anyhow = "1"
anyhow-tauri = "1"
phf = { version = "0.13", features = ["macros", "serde"] }
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
zip = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-dialog = "2.6.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
winapi = { version = "0.3.9", features = ["jobapi2", "processthreadsapi", "handleapi", "winnt", "winbase"] }
widestring = "1.2.1"

# Tauri Updater (桌面端自动更新)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
